js/src/tests/test262/built-ins/Number/NEGATIVE_INFINITY/S15.7.3.5_A1.js
assert
.
sameValue
(
isFinite
(
Number
.
NEGATIVE_INFINITY
)
false
'
isFinite
(
Number
.
NEGATIVE_INFINITY
)
must
return
false
'
)
;
reportCompare
(
0
0
)
;
